--- a/css/basic.css
+++ b/css/basic.css
@@ -51,10 +51,11 @@ ul {
 h1 {
   font-size: 2rem;
   padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 p {
-  padding: 0 1rem;
+  padding: 1rem;
   margin-bottom: 1rem;
   font-variant: normal;
   font-weight: 500;
