--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -94,6 +94,7 @@ body {
                 color: white;
                 box-shadow: -1rem -1rem $second-color;
             }
+            margin-bottom: 0;
         }
 
         div#icon-menu {
@@ -158,6 +159,7 @@ body {
 
     body {
         >header {
+            @include displayFlex($justify: flex-start);
             div#logo {
                 h1 {
                     a {
@@ -208,6 +210,11 @@ body {
                                 padding: 1rem;
                             }
                         }
+                    }
+                }
+                form#nav-search {
+                    input {
+                        max-width: 250px;
                     }
                 }
             }
