--- a/css/index.css
+++ b/css/index.css
@@ -212,7 +212,6 @@ body .content-container {
 
 /*    Typography 
     --------------------------------------------------*/
-body > header,
 body > div.content-container {
   margin-bottom: 1rem;
 }
@@ -384,7 +383,8 @@ main article > header {
   align-items: center;
   justify-content: center;
   min-height: 20vh;
-  margin: 0 1rem;
+  min-height: 300px;
+  margin: 1rem;
   background-color: rgba(0, 0, 0, 0.1);
   align-content: center;
 }
