--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,7 +6,8 @@ main {
         >header {
             @include displayFlex();
             min-height: 20vh;
-            margin: 0 1rem;
+            min-height: 300px;
+            margin: 1rem;
             background-color: rgba(black, .1);
             
             align-content: center;
