--- a/css/index.css
+++ b/css/index.css
@@ -47,8 +47,13 @@ ul {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
 
@@ -103,8 +108,9 @@ main article div#sections-wrapper section h2 {
   display: block;
   content: " ";
   z-index: -2;
-  width: 6rem;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
+  font-size: 0.8rem;
   background-color: black;
 }
 
@@ -119,8 +125,9 @@ main article div#sections-wrapper section h2 {
   content: "JINGWANG";
   color: white;
   z-index: -1;
-  width: 6rem;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
+  font-size: 0.8rem;
   background-color: #1080fb;
 }
 
@@ -436,22 +443,6 @@ aside section#aside-info figure {
 
 aside section#aside-info ul {
   padding: 1rem;
-  background: rgba(0, 0, 0, 0.5);
-  color: white;
-}
-
-aside section#aside-info ul a {
-  text-decoration: none;
-  color: white;
-  transition: all 1s;
-}
-
-aside section#aside-info ul a:hover {
-  color: #1080fb;
-}
-
-aside section#aside-info ul a:active {
-  color: #1080fb;
 }
 
 @media (min-width: 31.25em) {
