--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -47,8 +47,10 @@ i.fas, i.fab {
         content: " ";
         z-index: -2;
 
-        width: 6rem;
-        height: 6rem;
+        width: 5rem;
+        height: 5rem;
+        font-size: 0.8rem;
+
         background-color: $second-color;
 
     }
@@ -61,8 +63,9 @@ i.fas, i.fab {
         color: white;
         z-index: -1;
 
-        width: 6rem;
-        height: 6rem;
+        width: 5rem;
+        height: 5rem;
+        font-size: 0.8rem;
         background-color: $main-color;
 
     }
