--- a/scss/_tag.scss
+++ b/scss/_tag.scss
@@ -54,8 +54,13 @@ ul {
 
 
 h1  {
-    @include fontSize(2);
+    @include fontSize(3);
     padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+h2 {
+    @include fontSize(2);
     margin-bottom: 1rem;
 }
 
