--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,4 @@
 @import "basic";
-
 @include comment(Layout);
 
 main {
@@ -9,8 +8,7 @@ main {
             min-height: 20vh;
             min-height: 300px;
             margin: 1rem;
-            background-color: rgba(black, .1);
-            
+            background-color: rgba(black, .05);
             align-content: center;
             h1, p {
                 width: 100%;
@@ -28,7 +26,7 @@ main {
 aside {
     figure {
         img {
-            max-width: 100px;
+            max-width: 80px;
         }
     }
 }
@@ -61,7 +59,6 @@ main {
                 }
 
                 ul {
-
                     li {
                         a {
                             padding: 1rem;
@@ -83,7 +80,7 @@ aside {
 
     section#aside-info {
         padding: 1rem;
-
+        @include displayFlex($direction: row, $wrap: nowrap);
 
         figure {
             text-align: center;
@@ -92,6 +89,9 @@ aside {
 
         ul {
             padding: 1rem;
+            a {
+                @extend a;
+            }
         }
     }
 
@@ -170,7 +170,7 @@ aside {
             display: block;
             padding: 2rem 1rem;
 
-            min-width: 280px;
+            min-width: 260px;
 
         }
     }
