--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -41,8 +41,8 @@ i.fas, i.fab {
 
     &::before {
         position: absolute;
-        bottom: 2rem;
-        right: 2rem;
+        bottom: 1rem;
+        right: 1rem;
         display: block;
         content: " ";
         z-index: -2;
@@ -56,8 +56,8 @@ i.fas, i.fab {
     }
     &::after {
         position: absolute;
-        bottom: 1rem;
-        right: 1rem;
+        bottom: 0;
+        right: 0;
         @include displayFlex();
         content: "JINGWANG";
         color: white;
