--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -118,8 +118,7 @@ body {
         }
 
         form#nav-search {
-            padding: 1rem;
-
+            padding-right: 1rem;
             input {
                 width: 100%;
                 padding: 1rem;
@@ -210,7 +209,7 @@ body {
                     }
                 }
                 form#nav-search {
-                    max-width: 300px;
+                    max-width: 220px;
                 }
             }
         }
@@ -262,6 +261,13 @@ body {
 
     body {
         padding: 0 calc(50% - 480px);
+        >header {
+            div#nav-wrapper {
+                form#nav-search {
+                    max-width: 280px;
+                }
+            }
+        }
     }
 
 }
