--- a/scss/index.scss
+++ b/scss/index.scss
@@ -167,7 +167,7 @@ aside {
             display: block;
             padding: 2rem 1rem;
 
-            min-width: 260px;
+            // min-width: 260x;
 
         }
     }
