--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -19,6 +19,7 @@ html {
 html,
 body {
     min-height: 100vh;
+    min-width: 100vw;
 }
 
 
@@ -78,9 +79,9 @@ body {
 
 body {
 
-    >div.content-container {
-        margin-bottom: 1rem;
-    }
+    // >div.content-container {
+    //     margin-bottom: 1rem;
+    // }
 
     >header div#logo {
         h1 {
@@ -118,7 +119,7 @@ body {
         }
 
         form#nav-search {
-            padding-right: 1rem;
+            padding: 0 1rem;
             input {
                 width: 100%;
                 padding: 1rem;
@@ -209,7 +210,8 @@ body {
                     }
                 }
                 form#nav-search {
-                    max-width: 220px;
+                    width: 30vw;
+                    // min-width: 280px;
                 }
             }
         }
@@ -260,11 +262,15 @@ body {
     @include comment('Typography 900');
 
     body {
-        padding: 0 calc(50% - 480px);
+
+        > header, > .content-container, > footer {
+            padding: 0 calc(50% - 480px);
+        }
+
         >header {
             div#nav-wrapper {
                 form#nav-search {
-                    max-width: 280px;
+                    min-width: 280px;
                 }
             }
         }
@@ -273,12 +279,26 @@ body {
 }
 
 @include minw(1200) {
-    @include comment('Layout 900');
+    @include comment('Layout 1200');
 
-    @include comment('Typography 900');
+    @include comment('Typography 1200');
 
     body {
-        padding: 0 calc(50% - 600px);
+
+        > header, > .content-container, > footer {
+            padding: 0 calc(50% - 580px);
+        }
+
+        >header {
+            div#nav-wrapper {
+                form#nav-search {
+                    width: 30vｗ;
+                    max-width: 280px
+                }
+            }
+        }
+
     }
+
 
 }
