--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -19,7 +19,8 @@ html {
 html,
 body {
     min-height: 100vh;
-    min-width: 100vw;
+    // min-width: 100vw;
+    // Dont use the property, It will can responsive in PC 
 }
 
 
@@ -263,9 +264,9 @@ body {
 
     body {
 
-        > header, > .content-container, > footer {
-            padding: 0 calc(50% - 480px);
-        }
+        // > header, > .content-container, > footer {
+        //     padding: 0 calc(50% - 440px);
+        // }
 
         >header {
             div#nav-wrapper {
@@ -285,9 +286,9 @@ body {
 
     body {
 
-        > header, > .content-container, > footer {
-            padding: 0 calc(50% - 580px);
-        }
+        // > header, > .content-container, > footer {
+        //     padding: 0 calc(50% - 580px);
+        // }
 
         // >header {
         //     div#nav-wrapper {
