--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -264,9 +264,9 @@ body {
 
     body {
 
-        // > header, > .content-container, > footer {
-        //     padding: 0 calc(50% - 440px);
-        // }
+        > header, > .content-container, > footer {
+            padding: 0 calc(50% - 440px);
+        }
 
         >header {
             div#nav-wrapper {
@@ -286,9 +286,9 @@ body {
 
     body {
 
-        // > header, > .content-container, > footer {
-        //     padding: 0 calc(50% - 580px);
-        // }
+        > header, > .content-container, > footer {
+            padding: 0 calc(50% - 580px);
+        }
 
         // >header {
         //     div#nav-wrapper {
