--- a/css/index.css
+++ b/css/index.css
@@ -361,6 +361,9 @@ body div#nav-wrapper form#nav-search input {
   }
   /*    Typography 900 
     --------------------------------------------------*/
+  body > header, body > .content-container, body > footer {
+    padding: 0 calc(50% - 440px);
+  }
   body > header div#nav-wrapper form#nav-search {
     max-width: 280px;
   }
@@ -371,6 +374,9 @@ body div#nav-wrapper form#nav-search input {
     --------------------------------------------------*/
   /*    Typography 1200 
     --------------------------------------------------*/
+  body > header, body > .content-container, body > footer {
+    padding: 0 calc(50% - 580px);
+  }
 }
 
 /*    Layout 
