--- a/scss/_tag.scss
+++ b/scss/_tag.scss
@@ -52,15 +52,17 @@ ul {
 }
 
 
-h1  {
-    @include fontSize(3);
+h1,h2,h3  {
     padding: 1rem;
     margin-bottom: 1rem;
 }
 
+h1 {
+    @include fontSize(3);
+}
+
 h2 {
     @include fontSize(2);
-    margin-bottom: 1rem;
 }
 
 p  {
