--- a/scss/archive.scss
+++ b/scss/archive.scss
@@ -5,21 +5,34 @@ main {
     > article {
         >header {
             @include displayFlex();
-            min-height: 20vh;
-            min-height: 300px;
             margin: 1rem;
             background-color: rgba(black, .05);
-            align-content: center;
-            h1, p {
-                width: 100%;
-                padding: 0;
-                margin:  0 1rem;
-            }
-
             h1 {
-                margin-bottom:  1rem;
+                width: 100%;
+                margin-bottom: 0rem;
+            }
+        }
+
+        > article {
+            padding: 1rem;
+            background: lightblue;
+            margin: 1rem;
+
+            h2 {
+                padding: 0rem 1rem;
+                margin-bottom: 0rem;
+
             }
             
+            p {
+                margin-bottom: 0rem;
+                font-size: 1.5rem;
+            }
+
+            p.info {
+                font-size: 1rem;
+                padding: 0rem 1rem;
+            }
         }
     }
 }
@@ -39,10 +52,6 @@ main {
         >header {
             h1 {
                 line-height: 1.1;
-            }
-
-            h1, p {
-                text-align: center;
             }
 
         }
@@ -131,6 +140,17 @@ aside {
 }
 
 @include comment('layout 700');
+@include minw(700) {
+    main {
+        > article {
+            >header {
+                @include displayFlex();
+                min-height: 10vh;
+            }
+        }
+    }
+
+}
 @include comment('typography 700');
 
 
