--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,7 +49,7 @@ main {
 
         div#sections-wrapper {
             section {
-                margin: 1rem;
+                // margin: 1rem;
 
                 h2 {
                     @extend %border-bottom;
@@ -124,7 +124,6 @@ aside {
     aside {
         section#aside-info {
             padding: 2rem;
-
         }
     }
 
@@ -155,7 +154,6 @@ aside {
             section#aside-info {
                 display: block;
                 min-width: 220px;
-
             }
         }
 
@@ -167,9 +165,6 @@ aside {
         section#aside-info {
             display: block;
             padding: 2rem 1rem;
-
-            // min-width: 260x;
-
         }
     }
 }
