--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -265,7 +265,7 @@ body {
     body {
 
         > header, > .content-container, > footer {
-            padding: 0 calc(50% - 440px);
+            padding: 0 calc(50vw - 440px);
         }
 
         >header {
@@ -287,7 +287,7 @@ body {
     body {
 
         > header, > .content-container, > footer {
-            padding: 0 calc(50% - 580px);
+            padding: 0 calc(50vw - 580px);
         }
 
         // >header {
