--- a/css/index.css
+++ b/css/index.css
@@ -364,7 +364,7 @@ body div#nav-wrapper form#nav-search input {
   /*    Typography 900 
     --------------------------------------------------*/
   body > header, body > .content-container, body > footer {
-    padding: 0 calc(50% - 440px);
+    padding: 0 calc(50vw - 440px);
   }
   body > header div#nav-wrapper form#nav-search {
     max-width: 280px;
@@ -377,7 +377,7 @@ body div#nav-wrapper form#nav-search input {
   /*    Typography 1200 
     --------------------------------------------------*/
   body > header, body > .content-container, body > footer {
-    padding: 0 calc(50% - 580px);
+    padding: 0 calc(50vw - 580px);
   }
 }
 
@@ -417,6 +417,10 @@ main > article > header h1 {
 
 main > article > header h1, main > article > header p {
   text-align: center;
+}
+
+main > article div#sections-wrapper section {
+  margin: 1rem;
 }
 
 main > article div#sections-wrapper section ul li a, aside main > article div#sections-wrapper section#aside-info ul li a {
