--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,7 +49,7 @@ main {
 
         div#sections-wrapper {
             section {
-                // margin: 1rem;
+                margin: 1rem;
 
                 h2 {
                     @extend %border-bottom;
