--- a/scss/archive.scss
+++ b/scss/archive.scss
@@ -14,25 +14,32 @@ main {
         }
 
         > article {
-            padding: 1rem;
+            padding: 1rem 0;
             background: lightblue;
             margin: 1rem;
 
             h2 {
-                padding: 0rem 1rem;
-                margin-bottom: 0rem;
-
+                padding: 0 1rem;
+                margin: 0;
+                line-height: 1.2;
             }
             
-            p {
-                margin-bottom: 0rem;
-                font-size: 1.5rem;
-            }
-
             p.info {
                 font-size: 1rem;
                 padding: 0rem 1rem;
+                margin-bottom: 0rem;
+
+                span.name, time {
+                    font-weight: bolder;
+                }
             }
+
+            p.content {
+                margin-bottom: 0rem;
+                font-size: 1.5rem;
+                line-height: 1.2;
+            }
+
         }
     }
 }
